--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "axios": "^1.6.0",
+    "mongodb": "^6.18.0",
     "next": "15.3.2",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
